tiny fixes (scrollbars, link in navbar), fixed dF not registering at client, added one message "memory" a-la irssi

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -11,5 +11,6 @@
 #log {
   margin-bottom: 0;
   background-color: #efefef;
-  overflow: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
